--- a/views/jelolodetails.ejs
+++ b/views/jelolodetails.ejs
@@ -18,7 +18,7 @@
             <thead>
                 <tr>
                     <th colspan="2" style="border-right-width: 0px;"> 
-                        <h3>Fidesz Párt</h3>
+                        <h3><%= jelolo.nev %></h3>
                     </th>
                     <th style="text-align: right; border-left-width: 0px">
                         <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#jeloloeditmodal">
@@ -30,7 +30,7 @@
             <tbody> 
                 <tr>
                     <td rowspan="4" style="width: 1px">
-                        <img width="150px" src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cc/Fidesz_2015.svg/1024px-Fidesz_2015.svg.png"/>
+                        <img width="150px" src="<%= jelolo.kep %>"/>
                     </td>
                 </tr>
                 <tr>
@@ -38,7 +38,7 @@
                         <h5>Név:</h5>
                     </td>
                     <td>
-                        <p>Fidesz - Magyar Polgári Szövetség</p>
+                        <p><%= jelolo.nev %></p>
                     </td>
                 </tr>
                 <tr>
@@ -47,8 +47,7 @@
                     </td>
                     <td>
                         <p>
-                            nemzeti konzervatizmus, antikommunizmus, nacionalizmus,
-                            kereszténydemokrácia, euroszkepticizmus
+                            <%= jelolo.ideologiak %>
                         </p>
                     </td>
                 </tr>
@@ -57,14 +56,14 @@
                         <h5>Programja:</h5>
                     </td>
                     <td>
-                        <p>Nincs</p>
+                        <p><%= jelolo.program %></p>
                     </td>
                 </tr>
                 <tr>
                     <td colspan= "3">
-                        <h3>Bemutatkozás:</h3>
+                        <h3>Leírás:</h3>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt explicabo ea velit tempore excepturi sapiente quo enim nostrum dignissimos laudantium eum consectetur a amet ipsam, dolorem porro, necessitatibus nesciunt quod.
+                            <%= jelolo.leiras %>
                         </p>
                     </td>
                 </tr>
@@ -79,21 +78,22 @@
                     <h5 class="modal-title">Jelölő szervezet adatainak módosítása</h5>
                 </div>
                 <div class="modal-body">
-                    <form>
+                    <form method="POST" action="/jelolo/edit/<%= jelolo._id %>">
                         <div class="mb-3" style="text-align: start;">
                             <label for="oevknev" class="form-label">Név:</label>
-                            <input type="text" class="form-control" id="oevknev" value="Fidesz - Magyar Polgári Szövetség">
+                            <input type="text" class="form-control" id="oevknev" name="nev" value="<%= jelolo.nev %>">
                             <label for="ideologiak" class="form-label">Ideológiák:</label>
-                            <input type="text" class="form-control", id="ideologiak" value="nemzeti konzervatizmus, antikommunizmus, nacionalizmus, kereszténydemokrácia, euroszkepticizmus">
+                            <input type="text" class="form-control", id="ideologiak" name="ideologiak" value="<%= jelolo.ideologiak %>">
                             <label for="kepviseloprogram" class="form-label">Programja:</label>
-                            <input type="text" class="form-control" id="kepviseloprogram" value="Nincs">
-                            <label for="kepviseloprogram" class="form-label">Bemutatkozás:</label>
-                            <input type="text" class="form-control" id="kepviseloprogram" value="Lorem ipsum ...">
-                            <label for="kepviseloprogram" class="form-label">Kép:</label>
+                            <input type="text" class="form-control" id="kepviseloprogram" name="program" value="<%= jelolo.program %>">
+                            <label for="leiras" class="form-label">Leírás:</label>
+                            <input type="text" class="form-control" id="leiras" name="leiras" value="<%= jelolo.leiras %>">
+                            <label for="kep" class="form-label">Kép:</label>
                             <div>
-                                <img width="150px" src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cc/Fidesz_2015.svg/1024px-Fidesz_2015.svg.png">
+                                <img width="150px" src="<%= jelolo.kep %>">
                             </div>
-                            <input type="file" class="form-control" id="kepviseloprogram" value="c://sup/baby/take/me/to/dinner">
+                            <input type="url" class="form-control" id="kep" name="kep" value="<%= jelolo.kep %>">
+                            <input type="hidden" name="ret" value="/jelolo/<%= jelolo._id%>">
                         </div>
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Mégsem</button>
                         <button type="submit" class="btn btn-primary">Módosítás</button>
@@ -103,9 +103,6 @@
             </div>
         </div>
 
-    </div>
-    <div class="container">
-        <a href="/kepviselo/5" style="text-decoration: none"><i class="bi bi-arrow-left">&nbsp vissza</i></a>
     </div>
 </body>
 </html>
