--- a/views/ovklist.ejs
+++ b/views/ovklist.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="hu">
-<head>
-    <meta charset="utf-8">
+    <head>
+        <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
@@ -28,19 +28,76 @@
             <tbody>
                 <% ovks.forEach( function(ovk) { %>     
                 <tr>
-                    <td style="border-right-width: 0px" onclick="window.location='/ovk/1'">
-                            <%= ovk.nev %>
+                    <td style="border-right-width: 0px" onclick="window.location='/ovk/<%= ovk._id %>'">
+                        <%= ovk.nev %>
                     </td>
                     <td style="text-align: right; border-left-width: 0px; width: auto">
-                        <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#ovkeditmodal">
+                        <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#ovkeditmodal-<%= ovk._id %>">
                             <i class="bi bi-pencil-square"></i> 
                         </button>
-                        <button class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#ovkdeletemodal">
+                        <button type="submit" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#ovkdeletemodal-<%= ovk._id %>">
                             <i class="bi bi-trash"></i>
                         </button>
                     </td>
                 </tr>
-                <% }); %>
+                <div class="modal fade" id="ovkdeletemodal-<%= ovk._id %>">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title">Választókerület törlése</h5>
+                            </div>
+                            <div class="modal-body">
+                                <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
+                                    <symbol id="exclamation-triangle-fill" fill="currentColor" viewBox="0 0 16 16">
+                                        <path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
+                                    </symbol>
+                                </svg>
+                                <div class="alert alert-danger d-flex align-items-center" role="alert">
+                                    <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Danger:"><use xlink:href="#exclamation-triangle-fill"/></svg>
+                                    <div>
+                                        Biztos, hogy ki akarod törölni a <%= ovk.nev %> választókerületet?
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Mégsem</button>
+                                <a href="/ovk/delete/<%= ovk._id %>">
+                                    <button type="submit" class="btn btn-primary">Igen</button>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal fade" id="ovkeditmodal-<%= ovk._id %>">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title">Választókerület módosítása</h5>
+                        </div>
+                        <div class="modal-body">
+                            <form method="POST" action="ovk/edit/<%= ovk._id %>">
+                                <div class="mb-3" style="text-align: start;">
+                                    <label for="oevknev" class="form-label">Név:</label>
+                                    <input type="text" class="form-control" id="oevknev" value="<%= ovk.nev %>" name="nev">
+                                    <label for="kepviselok" class="form-label">Képviselők:</label>
+                                    <% kepviselok.forEach( function(kepviselo) { %>
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox" name="kepviselok" value="<%= kepviselo._id %>" id="<%= kepviselo._id %>>" <% if(ovk._kepviselok.includes(kepviselo._id)) { %> checked <% } %>>
+                                        <label class="form-check-label" for="<%= kepviselo._id %>">
+                                            <%= kepviselo.nev %>
+                                        </label>
+                                    </div>
+                                    <% }) %>
+                                    <input type="hidden" name="ret" value="/">
+                                </div>
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Mégsem</button>
+                                <button type="submit" class="btn btn-primary">Módosítás</button>
+                            </form>
+                        </div>
+                        </div>
+                    </div>
+                </div>
+                <% }) %>
             </tbody>
         </table>
 
@@ -52,100 +109,23 @@
                     <h5 class="modal-title">Új országos választókerület hozzáadása</h5>
                 </div>
                 <div class="modal-body">
-                    <form>
+                    <form method="POST" action="/ovk/new">
                         <div class="mb-3" style="text-align: start;">
                             <label for="oevknev" class="form-label">Név:</label>
-                            <input type="text" class="form-control" id="oevknev">
+                            <input type="text" class="form-control" id="oevknev" name="nev">
                             <label for="kepviselok" class="form-label">Képviselők:</label>
-                            <ul>
-                                <li>
-                                    Hollik István
-                                    <a href="#" class="link-danger"><i class="bi bi-trash"></i></a>
-                                </li>
-                                <li>
-                                    Csárdi Antal
-                                    <a href="#" class="link-danger"><i class="bi bi-trash"></i></a>
-                                </li>
-                            </ul>
-                            <label for="kepviselok" class="form-label">Új képviselőjelölt hozzáadása:</label>
-                            <select class="form-select" id="kepviselok">
-                                <option selected></option>
-                                <option value="csardi_antal">Csárdi Antal</option>
-                                <option value="hollik_istvan">Hollik István</option>
-                                <option value="gy_nemeth_erzsebet">Gy. Németh Erzsébet</option>
-                                <option value="gelencser_ferenc">Gelecsér Ferenc</option>
-                                <option value="gelencser_ferenc">stb...</option>
-                              </select>
+                            <% kepviselok.forEach( function(kepviselo) { %>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" name="kepviselok" value="<%= kepviselo._id %>" id="<%= kepviselo._id %>>">
+                                    <label class="form-check-label" for="<%= kepviselo._id %>">
+                                        <%= kepviselo.nev %>
+                                    </label>
+                                </div>
+                            <% }) %>
+                            <input type="hidden" name="ret" value="/">
                         </div>
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Mégsem</button>
                         <button type="submit" class="btn btn-primary">Hozzáadás</button>
-                    </form>
-                </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="modal fade" id="ovkdeletemodal">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title">Választókerület törlése</h5>
-                </div>
-                <div class="modal-body">
-                    <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
-                        <symbol id="exclamation-triangle-fill" fill="currentColor" viewBox="0 0 16 16">
-                          <path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
-                        </symbol>
-                      </svg>
-                    <div class="alert alert-danger d-flex align-items-center" role="alert">
-                        <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Danger:"><use xlink:href="#exclamation-triangle-fill"/></svg>
-                        <div>
-                          Biztos, hogy ki akarod törölni a Budapest 1. ovk-t?
-                        </div>
-                      </div>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Mégsem</button>
-                    <button type="button" class="btn btn-primary">Igen</button>
-                </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="modal fade" id="ovkeditmodal">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title">Választókerület módosítása</h5>
-                </div>
-                <div class="modal-body">
-                    <form>
-                        <div class="mb-3" style="text-align: start;">
-                            <label for="oevknev" class="form-label">Név:</label>
-                            <input type="text" class="form-control" id="oevknev" value="Budapest 1. ovk">
-                            <label for="kepviselok" class="form-label">Képviselők:</label>
-                            <ul>
-                                <li>
-                                    Hollik István
-                                    <a href="#" class="link-danger"><i class="bi bi-trash"></i></a>
-                                </li>
-                                <li>
-                                    Csárdi Antal
-                                    <a href="#" class="link-danger"><i class="bi bi-trash"></i></a>
-                                </li>
-                            </ul>
-                            <label for="kepviselok" class="form-label">Új képviselőjelölt hozzáadása:</label>
-                            <select class="form-select" id="kepviselok">
-                                <option selected></option>
-                                <option value="csardi_antal">Csárdi Antal</option>
-                                <option value="hollik_istvan">Hollik István</option>
-                                <option value="gy_nemeth_erzsebet">Gy. Németh Erzsébet</option>
-                                <option value="gelencser_ferenc">Gelecsér Ferenc</option>
-                                <option value="gelencser_ferenc">stb...</option>
-                              </select>
-                        </div>
-                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Mégsem</button>
-                        <button type="submit" class="btn btn-primary">Módosítás</button>
                     </form>
                 </div>
                 </div>
