Change ovk edit button

--- a/views/ovkdetails.ejs
+++ b/views/ovkdetails.ejs
@@ -20,7 +20,7 @@
                     </th>
                     <th style="text-align: right; border-left-width: 0px">
                         <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#ovkeditModal">
-                            <i class="bi bi-plus-square"></i>
+                            <i class="bi bi-pencil-square"></i>
                         </button>
                     </th>
                 </tr>    
